<resources>
    <string name="app_name">PickUp</string>
    <string name="search_title">Search</string>
    <string name="profile_title">Profile</string>
    <string name="news_feed">This is the news feed. \nThis is where all of our drops will be shown.
    </string>
    <string name="title_activity_search">Search</string>
    <string name="view_drop">View Drop</string>
    <string name="new_drop">New Drop</string>
    <string name="drop_name">Name</string>
    <string name="drop_message">Describe any extra details here: </string>
    <string name="drop_sport">Sport: </string>
    <string name="drop_difficulty">Difficulty: </string>
    <string name="drop_date">When: </string>
    <string name="drop_num_players">Number of players: </string>
    <string name="drop_preferred_gender">Preferred gender: </string>
    <string name="drop_location">Location: </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="location_hint">Enter location</string>
    <string name="message_hint">Enter message</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="drop">Drop</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_view_profile">ViewProfile</string>
    <string name="view_profile">Profile</string>
    <string name="back">BACK</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="player_name">Name: </string>
    <string name="email">Email: </string>
    <string name="preferences"><u>Preferences: </u></string>
    <string name="profile_radius">Radius</string>
    <string name="date_picker_title">Date: </string>
    <string name="date_button_text">Select date</string>
    <string name="time_button_text">Select time</string>
    <string name="logout">Logout</string>
    <string name="facebook_app_id">387735828281933</string>
    <string name="fb_login_protocol_scheme">fb1698807303768761</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string-array name="sport_array">
        <item>Select Sport</item>
        <item>Badminton</item>
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Billiards</item>
        <item>Bocce Ball</item>
        <item>Cornhole</item>
        <item>Croquet</item>
        <item>Darts</item>
        <item>Disc Golf</item>
        <item>Field Hockey</item>
        <item>Football</item>
        <item>Golf</item>
        <item>Ice Hockey</item>
        <item>Lacrosse</item>
        <item>Rugby</item>
        <item>Running</item>
        <item>Sand Volleyball</item>
        <item>Soccer</item>
        <item>Softball</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
        <item>Volleyball</item>
        <item>Water Polo</item>
        <item>Weightlifting</item>
        <item>Wrestling</item>
    </string-array>
    <string-array name="difficulty_array">
        <item>Select Skill Level</item>
        <item>Beginner player\'s only</item>
        <item>Intermediate player\'s only</item>
        <item>Advanced player\'s only</item>
        <item>Any skill level welcome</item>
    </string-array>
    <string-array name="gender_array">
        <item>Select Gender Perference</item>
        <item>Males Only</item>
        <item>Females Only</item>
        <item>Any gender welcome</item>
    </string-array>
    <string name="title_activity_maps">Map</string>


</resources>
