<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/fragment_container"
             tools:background="@color/background"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"/>

    <Button
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"/>

    </LinearLayout>

    <Button
        android:text="@string/view_drop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_drop_button"/>
    <Button
        android:text="@string/new_drop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_drop_button"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:id="@+id/drop_recycler_view"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

</FrameLayout>


