<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/fragment_container"
             tools:background="@color/background"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:id="@+id/drop_info"
        style="@style/WhiteBackdrop">

        <TextView
            android:text="@string/new_drop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_drop_title_text"
            android:textAppearance="@style/TextAppearance.AppCompat"
            style="@style/Texts.Title"/>
      
<!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/drop_sport"
            android:id="@+id/new_drop_sport_text"/>
-->
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sport_spinner"
            style="@style/Texts.Spinner"/>
<!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/drop_difficulty"
            android:id="@+id/new_drop_difficulty_text"/>
-->
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/difficulty_spinner"
            style="@style/Texts.Spinner"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

         <TextView
                android:text="@string/drop_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                style="@style/Texts"
                android:id="@+id/new_drop_date_title_text"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_drop_date_button"
                android:layout_margin="5dp"
                android:text="@string/date_button_text"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/new_drop_time_button"
                android:text="@string/time_button_text"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_drop_date_text"
                style="@style/Texts"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_drop_time_text"
                style="@style/Texts"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/drop_num_players"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Texts"
            android:textSize="16dp"
            android:id="@+id/new_drop_num_players_text"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/num_players_text"
            android:layout_marginLeft="8dp"
            style="@style/Texts.EditText"
            android:layout_weight="1"/>

        </LinearLayout>

  <!--      <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drop_preferred_gender"
            android:id="@+id/new_drop_preferred_gender_text"/>
-->
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Texts.Spinner"
            android:id="@+id/gender_spinner"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Texts"
            android:textSize="16dp"
            android:text="@string/drop_location"
            android:id="@+id/new_drop_location_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                style="@style/Texts"
                android:id="@+id/location"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Use Current Location"
            android:id="@+id/location_button"/>


        <TextView
            android:text="@string/drop_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Texts"
            android:id="@+id/new_drop_message"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:maxLines="3"
            android:scrollbars="vertical"
            style="@style/Texts.EditText"
            android:hint="@string/message_hint"
            android:id="@+id/message_edit_text"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop"
                android:id="@+id/drop_button"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal|center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:id="@+id/share_button"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal|center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancel_button"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal|center"/>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</FrameLayout>
